syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.mkammerer.grpcchat.protocol";
option java_outer_classname = "Protocol";

package grpcchat;

service Chat {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
    }
    rpc Login (LoginRequest) returns (LoginResponse) {
    }
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse) {
    }
    rpc ListRooms (ListRoomsRequest) returns (ListRoomsResponse) {
    }
    rpc ListUserRooms (ListRoomsRequest) returns (ListRoomsResponse) {
    }
    rpc JoinRoom (JoinRoomRequest) returns (JoinRoomResponse) {
    }
    rpc LeaveRoom (LeaveRoomRequest) returns (LeaveRoomResponse) {
    }
    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {
    }
    rpc GetMessages (GetMessagesRequest) returns (stream GetMessagesResponse) {
    }
}

message Error {
    int32 code = 1;
    string message = 2;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    Error error = 1;
    bool registered = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    Error error = 1;
    bool logged_in = 2;
    string token = 3;
}

message CreateRoomRequest {
    string token = 1;
    string name = 2;
}

message CreateRoomResponse {
    Error error = 1;
    bool created = 2;
}

message ListRoomsRequest {
    string token = 1;
}

message ListRoomsResponse {
    Error error = 1;
    repeated string rooms = 2;
}

message JoinRoomRequest {
    string token = 1;
    string name = 2;
}

message JoinRoomResponse {
    Error error = 1;
    bool joined = 2;
}

message LeaveRoomRequest {
    string token = 1;
    string name = 2;
}

message LeaveRoomResponse {
    Error error = 1;
    bool left = 2;
}

message SendMessageRequest {
    string token = 1;
    string room = 2;
    string text = 3;
}

message SendMessageResponse {
    Error error = 1;
    bool sent = 2;
}

message GetMessagesRequest {
    string token = 1;
}

message GetMessagesResponse {
    Error error = 1;
    string room = 2;
    string from = 3;
    string text = 4;
    int64 timestamp = 5;
}